# navi

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  README.org  TODO.md  TODO.org  build.sh  change-version.sh  cmake_install.cmake  compile_commands.json  config.lua  latest-version.txt  navi.html  uninstall.sh  wiki.md  wiki.org
config/: .luarc.json  bookmark.lua  init.lua  lua  mime.cache
config/lua/: functions.lua  keybindings.lua  options.lua
data/_lua/: navi.lua  navi.luac  navifm.lua  navifm.luac
docs/: api.html  config.lua  docs.html  features.html  index.html  index.org  installation.html  screenshots.html
docs/css/: api.css  features.css  index.css
docs/javascript/: index.js  installation.js  type.js
docs/javascript/highlight/: DIGESTS.md  highlight.js  highlight.min.js
navi-config/: bookmark.lua  init.lua
navi-config/lua/: functions.lua  harpoon.lua  keybindings.lua  options.lua
resources/: navi.desktop  navifm.desktop
rtd/: api.rst  changelog.rst  conf.py  getting_started.rst  index.rst  installation.rst  lua_scripting.rst  working.rst
rtd/_readthedocs/: .buildinfo.bak  api.html  changelog.html  gallery.html  genindex.html  getting_started.html  index.html  installation.html  issues.html  lua_scripting.html  objects.inv  py-modindex.html  screenshots.html  search.html  searchindex.js
rtd/_readthedocs/.doctrees/: api.doctree  changelog.doctree  environment.pickle  gallery.doctree  getting_started.doctree  index.doctree  installation.doctree  issues.doctree  lua_scripting.doctree  screenshots.doctree
rtd/_readthedocs/_downloads/8752fc5bc3ce9569ac688571f93ef6ce/: config.lua
rtd/_readthedocs/_sources/: api.rst.txt  changelog.rst.txt  gallery.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  issues.rst.txt  lua_scripting.rst.txt  screenshots.rst.txt
src/: API  API.cpp  API.cpp.bak  API.hpp  AboutWidget.cpp  AboutWidget.hpp  BookmarkManager.cpp  BookmarkManager.hpp  BookmarkWidget.cpp  BookmarkWidget.hpp  CollapsibleWidget.cpp  CollapsibleWidget.hpp  CompletionDelegate.hpp  CompletionPopup.cpp  CompletionPopup.hpp  ContextMenu.cpp  ContextMenu.hpp  CustomCompleter.cpp  CustomCompleter.hpp  CustomInputDialog.cpp  CustomInputDialog.hpp  DesktopFile.cpp  DesktopFile.hpp  DriveWidget.cpp  DriveWidget.hpp  FilePanel.cpp  FilePanel.hpp  FilePanelDelegate.hpp  FilePanelWidget.cpp  FilePanelWidget.hpp  FilePathWidget.cpp  FilePathWidget.hpp  FilePreviewWorker.hpp  FilePropertyWidget.cpp  FilePropertyWidget.hpp  FileSystemModel.cpp  FileSystemModel.hpp  FileWorker.cpp  FileWorker.hpp  FolderPropertyWidget.cpp  (+79 more)
src/pch/: pch.hpp  pch_filepanel.hpp  pch_filepaneldelegate.hpp  pch_filepathwidget.hpp  pch_filepreviewworker.hpp  pch_filesystemmodel.hpp  pch_folderpropertywidget.hpp  pch_inputbar.hpp  pch_mimeutils.hpp  pch_previewpanel.hpp  pch_questiondialog.hpp  pch_shortcutswidget.hpp  pch_statusbar.hpp  pch_tableview.hpp  pch_taskcardtemplate.hpp  pch_taskswidget.hpp  pch_thumbnailer.hpp  pch_updatedialog.hpp  pch_utils.hpp
